fix: corriger les valeurs des indicateurs mass action

--- a/ui/src/locales/fr.json
+++ b/ui/src/locales/fr.json
@@ -87,6 +87,7 @@
     "ge": "Supérieure à",
     "le": "Inférieure à",
     "date-since": "À partir du {startDate}",
+    "date-over": "Au delà de {endDate}",
     "details": {
       "title": "Commande n° {id}"
     },
