--- a/ui/src/locales/fr.json
+++ b/ui/src/locales/fr.json
@@ -249,7 +249,9 @@
         "ACTIVATED": "Activée",
         "SUSPENDED": "Suspendue",
         "RELEASED": "Résiliée",
-        "ACTIVATING": "Activation en cours"
+        "ACTIVATING": "Activation en cours",
+        "CANCELED": "Annulée",
+        "TEST": "Test"
       },
       "col": {
         "simStatus": "Statut de SIM",
