feat (Recherche de lignes): filtre status de ligne

--- a/ui/src/locales/fr.json
+++ b/ui/src/locales/fr.json
@@ -251,7 +251,8 @@
         "RELEASED": "Résiliée",
         "ACTIVATING": "Activation en cours",
         "CANCELED": "Annulée",
-        "TEST": "Test"
+        "TEST": "Test",
+        "BARRED": "Barré"
       },
       "col": {
         "simStatus": "Statut de SIM",
