--- a/ui/src/locales/fr.json
+++ b/ui/src/locales/fr.json
@@ -239,7 +239,7 @@
       }
     },
     "actLines": {
-      "total": "{total} lignes",
+      "total": "{total} ligne(s) trouvé(s)",
       "step1Partner": "séléctionner un partenaire",
       "step1Title": "séléctionner les lignes avec les filtres et le tableau",
       "step2Title": "configurer le changement de compte de facturation",
