refactor: translate statuses

--- a/ui/src/locales/fr.json
+++ b/ui/src/locales/fr.json
@@ -269,6 +269,46 @@
         "TEST": "Test",
         "BARRED": "Barré"
       },
+      "commercialStatuses": {
+        "demandeDeResiliation": "Demande de résiliation",
+        "facturationActive": "Facturation active",
+        "facturationActiveEnCours": "Facturation active en cours",
+        "resiliationEnCours": "Résiliation en cours",
+        "resilie": "Résilié",
+        "suspenduFacture": "Suspendu facturé",
+        "suspenduFactureBO": "Suspendu facturé BO",
+        "suspenduNonFacture": "Suspendu non facturé",
+        "suspenduNonFactureBO": "Suspendu non facturé BO",
+        "suspensionFactureBOEnCours": "Suspension facturé BO en cours",
+        "suspensionFactureEnCours": "Suspension facturé en cours",
+        "suspensionNonFactureBOEnCours": "Suspension non facturé BO en cours",
+        "suspensionNonFactureEnCours": "Suspension non facturé en cours",
+        "stock": "Stock",
+        "stockEnCours": "Stock en cours",
+        "test": "Test",
+        "testEnCours": "Test en cours",
+        "tryAndBuy": "Try and Buy",
+        "tryAndBuyEnCours": "Try and buy en cours",
+        "suspendu": "Suspendu",
+        "suspenduBO": "Suspendu BO",
+        "suspensionBOEnCours": "Suspension BO en cours",
+        "suspensionEnCours": "Suspension en cours",
+        "activationEnCours": "Activation en cours",
+        "barree": "Barré",
+        "barringEnCours": "Barring en cours",
+        "leveeBarringEnCours": "Levée du barring en cours",
+        "reactivationEnCours": "Réactivation en cours",
+        "vendu": "Vendu",
+        "venteEnCours": "Vente en cours",
+        "actifNonFacture": "Actif non facturé",
+        "actifNonFactureEnCours": "Actif non facturé en cours",
+        "facturationActiveAvecRoaming": "Facturation active avec roaming",
+        "facturationActiveAvecRoamingEnCours": "Facturation active avec roaming en cours",
+        "reactivationFacturationActiveEnCours": "Réactivation facturation active en cours",
+        "reactivationFacturationAvecRoamingEnCours": "Réactivation facturation active avec roaming en cours",
+        "suppressionRoamingEnCours": "Suppression roaming en cours",
+        "ajoutRoamingEnCours": "Ajout roaming en cours"
+      },
       "col": {
         "simStatus": "Statut de SIM",
         "lastPLMN": "Dernier pays (ancien PLMN)",
