add actions cancel and export

--- a/ui/src/locales/fr.json
+++ b/ui/src/locales/fr.json
@@ -209,6 +209,12 @@
           "TERMINATED": "Terminé",
           "CANCELLED": "Annulé"
         }
+      },
+      "actions": {
+        "btn": "Actions",
+        "DETAIL": "Voir le détail",
+        "EXPORT": "Exporter l'acte",
+        "CANCEL": "Annuler l'acte"
       }
     },
     "actDetail": {
