--- a/ui/src/locales/fr.json
+++ b/ui/src/locales/fr.json
@@ -363,7 +363,8 @@
         "validateBtn": "Valider la modification",
         "confirmBtn": "Confirmer la modification",
         "confirmationWarning": "Attention ! Cette action a un impact sur le réseau.Confirmez-vous la modification de services ?",
-        "servicesMandatory": "* Veuillez choisir une offre et services"
+        "servicesMandatory": "* Veuillez choisir une offre et services",
+        "shouldChangeData": "Modifier le service data"
       },
 
       "changeMSISDN": {
