fix: 705 correction de l'export des liges

--- a/ui/src/locales/fr.json
+++ b/ui/src/locales/fr.json
@@ -16,6 +16,7 @@
   "delete": "Supprimer",
   "modify": "Modifier",
   "export": "Exporter",
+  "exportError": "Impossible d'exporter",
   "logout": "Déconnexion",
   "required": "Champ obligatoire",
   "optional": "Champ facultatif",
