fix: 585 corriger l'affichage des erreurs

--- a/ui/src/locales/fr.json
+++ b/ui/src/locales/fr.json
@@ -269,6 +269,9 @@
       "previsionalVoice": "Prévisionnel Voix",
       "consuming": "EN COURS DE CONSOMMATION",
       "analysingTool": "GETDIAG / OUTILS D'ANALYSE",
+      "report": {
+        "alreadyExists": "Ligne existante"
+      },
       "tab1": {
         "lineInfo": "Informations sur la ligne",
         "billingOffer": {
