style(Homepage): 639 intialiser corectement le filtre par ID

--- a/ui/src/locales/fr.json
+++ b/ui/src/locales/fr.json
@@ -641,6 +641,7 @@
     "compatibility": "-non compatible"
   },
   "filters": {
+    "idOrder": "ID de commande",
     "title": "FILTRES",
     "partners": "Partenaires",
     "countries": "Pays",
