feat: 559 Exporter l'encour consommation

--- a/ui/src/locales/fr.json
+++ b/ui/src/locales/fr.json
@@ -286,7 +286,8 @@
       "consummated": {
         "data": "Data consommées",
         "sms": "SMS consommés",
-        "voice": "Voix consommée"
+        "voice": "Voix consommée",
+        "export": "Exporter l'encours de consommation"
       },
       "estimated": {
         "data": "Prévisionnel Data",
